[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.67"
repository = "https://github.com/Satellite-im/Warp"


[workspace]
members = ["extensions/*", "warp", "tools/*"]
exclude = ["deprecated/*", "tools/opencv-test", "tools/video-codec-cli"]

resolver = "2"

[workspace.dependencies]

# Async and futures crates
futures = { version = "0.3" }
futures-timer = "3.0"
async-trait = { version = "0.1" }
async-stream = "0.3"
async-broadcast = "0.5"
tokio = { version = "1" }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1" }

# Crypto crates
x25519-dalek = { version = "1" }
ed25519-dalek = { version = "1" }
curve25519-dalek = "3.2"
blake2 = { version = "0.10" }
sha1 = { version = "0.10" }
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
hmac = { version = "0.12.0", default-features = false }
digest = { version = "0.10" }
aes-gcm = { version = "0.10" }
zeroize = "1"
rand = { version = "0.8" }
multihash = { version = "0.18" }
did-key = { git = "https://github.com/Satellite-im/did-key.rs", branch = "backport-patch-v0" }
tiny-bip39 = "1.0"

# Error handling crates
anyhow = { version = "1" }
thiserror = "1.0"

# Sync crates
parking_lot = { version = "0.12" }
cfg-if = "1.0"
once_cell = "1.16"

# Time crate
chrono = { version = "~0.4.27" }

# Encoding and Serializing Crates
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
serde_cbor = "0.11.2"
serde_yaml = "0.9"
toml = "0.5"
bs58 = "0.4"
hex = "0.4"
libipld = { version = "0.16", features = ["serde-codec"] }
bytes = "1"
bincode = "1"
image = "0.24"
mediatype = { version = "0.19", features = ["serde"] }

# Misc
dyn-clone = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
derive_more = "0.99"
paste = "1.0"
libc = "0.2"
sata = { git = "https://github.com/Satellite-im/Sata", rev = "9b5a5d441c816968bc75ea8b99335f728be259ef" }
tracing = { version = "0.1" }
tracing-futures = { version = "0.2" }
getrandom = { version = "0.2" }
either = "1"
void = "1"

#ipfs dependency
rust-ipfs = { version = "0.9.0", default-features = false, features = ["libp2p_bitswap"] }


# Blink related crates
# av-data is needed to use libaom. need to ensure that Warp and libaom use the same version of av-data
av-data = "*"
libaom = { git="https://github.com/Satellite-im/aom-rs", branch="feat/windows-build" }
mp4 = { git="https://github.com/satellite-im/mp4-rust", rev="9abb40d9a7690c3d5012a9f259f4b22adab06ec3" }
eye = { git="https://github.com/raymanfx/eye-rs.git", rev="24324eb629dd73f349d0b4678cb0dd4dc5d75f1c" }
opus = { git = "https://github.com/Satellite-im/opus-rs", rev="893b9f7e7e0cd00d13a64533967c6d2d6b1cb044" }

warp = { path = "./warp" }
warp-ipfs = { path = "./extensions/warp-ipfs" }
warp-blink-wrtc = { path = "./extensions/warp-blink-wrtc" }
