[package]
name = "warp-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "warp"
path = "src/main.rs"

[dependencies]
dirs = "4.0"
tokio = { version = "1", features = ["full"] }
warp = { path = "../warp" }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
bs58 = "0.4"
cfg-if = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

base64 = { version = "0.13.0" }

clap = { version = "3.1", features = ["derive"], optional = true }

tui = {version = "0.17", features = ["crossterm"], optional = true }
tui-logger = { version = "0.7", optional = true }
crossterm = {version = "0.23", optional = true }
comfy-table = {version = "5.0.1", optional = true }

thiserror = "1.0"

rustyline = { version = "9.1", optional = true }
rustyline-derive = { version = "0.6", optional = true }
unicode-width = { version = "0.1", optional = true }

warp-configuration = { path = "../config/warp-configuration" }

warp-extensions = { path = "../warp-extensions", features = ["all"]}

axum = { version = "0.5", optional = true }
rocket = { version = "0.5.0-rc.1", git = "https://github.com/SergioBenitez/Rocket", optional = true, features = ["json"] } #TODO: do not use git directly but for now use it for development


[features]
default = 		["for_terminal"]
for_terminal =  ["http_rocket", "ui", "cli"]
http_rocket =   ["rocket"]
http_axum =     ["axum"]


ui =  ["tui", "tui-logger", "crossterm"]
cli = ["rustyline", "rustyline-derive", "unicode-width", "clap", "comfy-table"]