[package]
name = "warp"
version.workspace = true
description = "TBD"
# readme = "README.md"
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[dependencies]

# Async and futures crates
futures.workspace = true
async-trait.workspace = true
async-stream.workspace = true
async-broadcast.workspace = true

# Crypto crates
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
curve25519-dalek.workspace = true
blake2.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
hmac.workspace = true
digest.workspace = true
aes-gcm = { workspace = true, features = ["stream"] }
zeroize.workspace = true
rand.workspace = true
multihash = { workspace = true, features = ["sha1"] }
did-key.workspace = true
tiny-bip39.workspace = true

# Error handling crates
anyhow.workspace = true
thiserror.workspace = true

# Sync crates
parking_lot = { workspace = true, features = ["send_guard", "serde"] }
cfg-if.workspace = true
once_cell.workspace = true

# Time crate
chrono = { workspace = true, features = ["serde", "wasmbind"] }

# Encoding and Serializing Crates
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
bincode.workspace = true
toml.workspace = true
bs58.workspace = true
hex.workspace = true
libipld = { workspace = true }

# Misc
dyn-clone.workspace = true
uuid.workspace = true
derive_more.workspace = true
paste.workspace = true
libc.workspace = true
warp-derive = { path = "./warp-derive" }
sata.workspace = true
tracing = {  features = ["log"], workspace = true }
tracing-futures = { features = [
    "std-future",
    "std",
    "futures-03",
], workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4.30"
wasm-streams = "0.2"
gloo = "0.7"
getrandom = { workspace = true, features = ["js"] }
web-sys = { version = "0.3" }
js-sys = { version = "0.3" }
serde-wasm-bindgen = "0.4.2"
console_error_panic_hook = { version = "0.1.6" }


[features]
default = []
wasm_debug = []

# These are use for build.rs to install cbindgen and nightly toolchain to generate headers
# Note this will change in the future once its fixed upstream
build-header = []
force-install = []

[build-dependencies]
cbindgen = "0.23"
