[package]
name = "warp-configuration"
version = "0.1.0"
description = "TBD"
# readme = "README.md"
license = "MIT"
edition = "2021"
repository = "https://github.com/Satellite-im/Warp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
warp-common = { path = "../../utils/warp-common", features = ["async"]}
thiserror = "1.0"

[features]
default = []
async = []