[package]
name = "warp-fs-storj"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
rust-s3 = { version = "0.31", optional = true, default-features = false, features = ["tags", "tokio-rustls-tls", "fail-on-err"] }
aws-config = { version = "0.46", optional = true }
aws-sdk-s3 = { version = "0.16", optional = true }
aws-endpoint = { version = "0.46", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"

warp = { path = "../../warp" }

anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["s3"]
s3 = ["rust-s3", "aws-config", "aws-sdk-s3", "aws-endpoint"]
uplink = []
build-header = []

[build-dependencies]
cbindgen = "0.23"

