[package]
name = "warp-blink-wrtc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
async-trait = { version = "0.1" }
async-stream = "0.3"
bytes = "1.4.0"
bs58 = "0.4.0"
derive_more = "0.99.17"
futures = { version = "0.3" }
rust-ipfs.workspace = true
libipld.workspace = true
log = "0.4.17"
once_cell = "1.11"
opus = "0.3.0"
uuid = "1.2.2"
rand = "0.8.5"
ringbuf = "0.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_cbor = "0.11.2"
tokio = { version = "1", features = ["full"] }
warp = { path = "../../warp" }
webrtc = "0.6.0"

# media 
cpal = "0.15.0"

[build-dependencies]
cbindgen = "0.23"

[features]
build-header = []