[package]
name = "warp-fs-ipfs-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
ipfs-api-backend-hyper    = { version = "0.5", features = ["with-send-sync", "with-hyper-rustls"] }
hyper-rustls = "0.23.0"
hyper                     = { version = "0.14", features = ["http1", "http2", "client", "tcp"] }
http = "0.2"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
futures = { version = "0.3" }
warp = { path = "../../warp" }

anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
cbindgen = "0.23"

[features]
build-header = []