[package]
name = "warp-fs-ipfs-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
ipfs-api-backend-hyper    = { version = "0.5", features = ["with-send-sync", "with-hyper-rustls"] }
hyper-rustls = "0.23.0"
hyper                     = { version = "0.14", features = ["http1", "http2", "client", "tcp"] }
http = "0.2"

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
async-trait.workspace = true
futures.workspace = true
warp = { path = "../../warp" }

anyhow.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }

[build-dependencies]
cbindgen = "0.23"

[features]
build-header = []