[package]
name = "warp-fs-ipfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
ipfs = { git = "https://github.com/Satellite-im/rust-ipfs", branch = "libp2p-next-usable", features = [
    "external-gossipsub-stream",
] }
libipld = { version = "0.14", features = ["serde-codec"] }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
futures = { version = "0.3" }
warp = { path = "../../warp" }

anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
warp-mp-ipfs = { path = "../warp-mp-ipfs" }

[build-dependencies]
cbindgen = "0.23"

[features]
build-header = []
