[package]
name = "warp-fs-ipfs"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
rust-ipfs.workspace = true
libipld.workspace = true

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
warp = { path = "../../warp" }

anyhow.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }

image.workspace = true
derive_more.workspace = true
mediatype.workspace = true

[dev-dependencies]
warp-mp-ipfs = { path = "../warp-mp-ipfs" }
fdlimit = "0.2"
bs58 = "0.4"
rustyline-async = "0.3"
comfy-table = "6.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"

[build-dependencies]
cbindgen = "0.23"

[features]
build-header = []
