[package]
name = "warp-fs-memory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

async-trait = "0.1"

anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "1.0"
dyn-clone = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }

wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4.2"

[build-dependencies]
cbindgen = "0.23"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }