[package]
name = "warp-fs-memory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp.workspace = true

async-trait.workspace = true

anyhow.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
thiserror.workspace = true
dyn-clone.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
parking_lot.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
cbindgen = "0.23"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
build-header = []