[package]
name = "warp-fs-storj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = { version = "0.30.0", optional = true }
aws-config = { version = "0.10.1", optional = true }
aws-sdk-s3 = { version = "0.10.1", optional = true }
aws-endpoint = { version = "0.10.1", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"

warp = { path = "../../warp" }

anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["s3"]
s3 = ["rust-s3", "aws-config", "aws-sdk-s3", "aws-endpoint"]
uplink = []

[build-dependencies]
cbindgen = "0.23"
