[package]
name = "warp-fs-storj"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
rust-s3 = { version = "0.31", optional = true, default-features = false, features = ["tags", "tokio-rustls-tls", "fail-on-err"] }
aws-config = { version = "0.46", optional = true }
aws-sdk-s3 = { version = "0.16", optional = true }
aws-endpoint = { version = "0.46", optional = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
async-trait.workspace = true

warp = { path = "../../warp" }

anyhow.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }

[features]
default = ["s3"]
s3 = ["rust-s3", "aws-config", "aws-sdk-s3", "aws-endpoint"]
uplink = []
build-header = []

[build-dependencies]
cbindgen = "0.23"

