[package]
name = "warp-ipfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp.workspace = true

rust-ipfs.workspace = true
libipld.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
futures.workspace = true
futures-timer.workspace = true
async-trait.workspace = true
async-stream.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
either = { workspace = true, features = ["serde"] }
bs58 = "0.4"

tracing = "0.1"

chrono = { workspace = true, features = ["serde"] }

void.workspace = true

image = { workspace = true }
derive_more.workspace = true
mediatype.workspace = true

bincode.workspace = true
bayespam = "1.1.0"
bytes.workspace = true

shuttle = { path = "../../tools/shuttle", default-features = false }

[dev-dependencies]
derive_more.workspace = true
strum = "0.25"
strum_macros = "0.25"
fdlimit = "0.3"
rustyline-async = "0.4"
comfy-table = "7.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

clap = { version = "4.0", features = ["derive"] }

rpassword = "7.3"


[features]
default = []
build-header = []
