[package]
name = "warp-ipfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp.workspace = true

futures-timeout.workspace = true
rust-ipfs = { workspace = true, features = ["webrtc_transport", "experimental_stream"] }
libipld.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
futures.workspace = true
async-trait.workspace = true
async-stream.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
either = { workspace = true, features = ["serde"] }
bs58.workspace = true
parking_lot.workspace = true

tracing.workspace = true

async-recursion = "1"

chrono = { workspace = true }

void.workspace = true

image = { workspace = true }
derive_more.workspace = true
mediatype.workspace = true

bincode.workspace = true
bytes.workspace = true

shuttle = { path = "../../tools/shuttle", default-features = false }
fs = { path = "../../tools/fs", default-features = false }

tokio-util = { workspace = true }
tokio-stream = { workspace = true }

web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
futures-timer = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }
futures-timer = { workspace = true, features = ["wasm-bindgen"] }
wasm-bindgen-futures = { version = "0.4" }
wasm-bindgen.workspace = true
js-sys.workspace = true

[dev-dependencies]
derive_more.workspace = true
strum = "0.25"
strum_macros = "0.25"
fdlimit = "0.3"
rustyline-async = "0.4"
comfy-table = "7.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

clap = { version = "4.0", features = ["derive"] }

rpassword = "7.3"


[features]
default = []
build-header = []
