[package]
name = "warp-mp-ipfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

ipfs = { git = "https://github.com/Satellite-im/rust-ipfs", rev = "5b7f68e975a338b350a6991c1e507f1d5f22a939", features = [
    "external-gossipsub-stream",
] }
libipld = { version = "0.15", features = ["serde-codec"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
async-trait = { version = "0.1" }
async-stream = "0.3"
anyhow = { version = "1" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
bs58 = "0.4"
cfg-if = "1.0"
tracing = "0.1"

hex = "0.4"

chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
fdlimit = "0.2"
bs58 = "0.4"
warp-pd-flatfile = { path = "../warp-pd-flatfile" }
warp-pd-stretto = { path = "../warp-pd-stretto" }
rustyline-async = "0.2"
comfy-table = "6.0"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

clap = { version = "3.2", features = ["derive"] }
dirs = "4.0"

[features]
default = []
build-header = []
