[package]
name = "warp-mp-ipfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
warp = { path = "../../warp" }

rust-ipfs = { version = "=0.3.0" }
libipld = { version = "0.15", features = ["serde-codec"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = { version = "0.3" }
async-trait = { version = "0.1" }
async-stream = "0.3"
anyhow = { version = "1" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
bs58 = "0.4"

tracing = "0.1"

chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
fdlimit = "0.2"
bs58 = "0.4"
warp-pd-flatfile = { path = "../warp-pd-flatfile" }
warp-pd-stretto = { path = "../warp-pd-stretto" }
rustyline-async = "0.3"
comfy-table = "6.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"

[features]
default = []
build-header = []
